--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 title: Lars Brestrich  
 logo: /assets/img/headshot_larsB.png
-description: Data Science Portfolio
+description: Data analyst with MSc in Data-Intensive Analysis from the University of St Andrews and 8 years of programming experience.
 theme: jekyll-theme-minimal
