--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 title: Lars Brestrich  
 logo: /assets/img/headshot_larsB.jpg
-description: Data scientist with MSc in Data-Intensive Analysis from the University of St Andrews and 8 years of programming experience. <br><br> UK-educated, native speaker in German and English.
+description: <br>Data scientist with MSc in Data-Intensive Analysis from the University of St Andrews and 8 years of programming experience. <br><br> UK-educated, native speaker in German and English.
 theme: jekyll-theme-minimal
