--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 title: Lars Brestrich  
 logo: /assets/img/headshot_larsB.jpg
-description: <br>Data scientist with MSc in Data-Intensive Analysis from the University of St Andrews and 8 years of programming experience. Formerly professional game programmer. <br><br> UK-educated, native speaker in German and English. <br><br> [LinkedIn](https://www.linkedin.com/in/lars-brestrich/)
+description: <br>Data scientist with MSc in Data-Intensive Analysis from the University of St Andrews and 8 years of programming experience. Formerly professional game programmer. <p> UK-educated, native speaker in German and English. <p> <a href="https://www.linkedin.com/in/lars-brestrich/">LinkedIn</a>
 theme: jekyll-theme-minimal
