--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 title: Lars Brestrich  
 logo: /assets/img/headshot_larsB.jpg
-description: <br>Data scientist with MSc in Data-Intensive Analysis from the University of St Andrews and 8 years of programming experience. Formerly professional game programmer. <p> UK-educated, native speaker in German and English. <p> <a href="https://www.linkedin.com/in/lars-brestrich/">LinkedIn</a>
+description: <br>Data Scientist with MSc from St Andrews (Distinction) and 3 years of professional software development experience. Expertise in implementing complex algorithms and analytics solutions, complemented by strong programming skills in Python and C++. <p> <a href="https://www.linkedin.com/in/lars-brestrich/">LinkedIn</a>
 theme: jekyll-theme-minimal
