updated data analysis parts

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 title: Lars Brestrich  
 logo: /assets/img/headshot_larsB.jpg
-description: <br>Data Scientist with MSc from St Andrews (Distinction) and 3 years of professional software development experience. Expertise in implementing complex algorithms and analytics solutions, complemented by strong programming skills in Python and C++. <p> <a href="https://www.linkedin.com/in/lars-brestrich/">LinkedIn</a>
+description: <br>Data Analyst with MSc from St Andrews (Distinction) and 3+ years of professional software development experience. Expertise in statistical analysis, data manipulation and data visualisation, complemented by strong programming skills in Python and C++. <p> <a href="https://www.linkedin.com/in/lars-brestrich/">LinkedIn</a>
 theme: jekyll-theme-minimal
